# invoicing-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  LESSONS.md  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  ruff.toml
apps/api/: pyproject.toml
apps/api/src/app/: __init__.py  bootstrap.py  export_openapi.py  main.py  settings.py
apps/api/tests/: test_app.py  test_health.py  test_openapi.py
apps/web/: next.config.ts  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  logo.tsx  nav.tsx  page.tsx
apps/web/app/clients/: page.tsx
apps/web/app/invoices/: page.tsx
apps/web/app/invoices/[id]/: page.tsx
apps/web/app/invoices/new/: page.tsx
apps/web/app/login/: page.tsx
apps/web/lib/: api.ts  types.ts  use-auth-guard.ts
docs/: ARCHITECTURE.md  INSTALL.md  plugin-sdk.md
infra/docker/: Dockerfile.api  Dockerfile.web
